@@ -10,7 +10,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.BLANK_STRING;
 
@@ -60,13 +59,13 @@ public enum SolicitorRole {
     public static List<SolicitorRole> matchingRoles(Representing representing) {
         return Arrays.stream(uk.gov.hmcts.reform.prl.enums.noticeofchange.SolicitorRole.values())
             .filter(role -> role.representing == representing)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public static List<SolicitorRole> notMatchingRoles(Representing representing) {
         return Arrays.stream(uk.gov.hmcts.reform.prl.enums.noticeofchange.SolicitorRole.values())
             .filter(role -> role.representing != representing)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     public enum Representing {
